--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8"> 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Padnis - Gestión de Torneos</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-</head>
-<body>
-  <div id="root"></div>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="App para gestionar torneos de padel/tenis"
+    />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <title>Padnis – Gestión de Torneos</title>
+  </head>
+  <body>
+    <noscript>Necesitas habilitar JavaScript para ver esta app.</noscript>
+    <div id="root"></div>
+    <!--
+      El script y los CSS de producción se inyectan automáticamente -->
+  </body>
 </html>
