--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,18 +4,13 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="App para gestionar torneos de padel/tenis"
-    />
+    <meta name="description" content="App para gestionar torneos de padel/tenis" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Padnis – Gestión de Torneos</title>
   </head>
   <body>
     <noscript>Necesitas habilitar JavaScript para ver esta app.</noscript>
     <div id="root"></div>
-    <!--
-      El script y los CSS de producción se inyectan automáticamente -->
+    <!-- React inyecta aquí los <script> y <link> a los bundles -->
   </body>
 </html>
